feat: support rich Kotlin and compound boolean expression evaluation (#72)